設定セクションのUIを改善し、グリッドサイズの初期値を設定しました。また、ランダム生成ボタンを追加しました。

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
         <button id="mode">mode: reverse</button>
 
         <div class="setting">
-            <input type="number" placeholder="row" />
-            <input type="number" placeholder="column" />
-            <button id="set">generate</button>
+            <div class="inputs">
+                <input type="number" placeholder="row" value="5" />
+                <input type="number" placeholder="column" value="5" />
+            </div>
+
+            <div class="buttons">
+                <button id="set">Generate</button>
+                <button id="random">Resolvable Random</button>
+                <button id="random-2">Non-resolvable Random</button>
+            </div>
         </div>
 
         <script src="run.js"></script>
