盤面情報をURLに共有する機能を追加し、コピーボタンを実装しました。また、スタイルを調整しました。

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Lights-Out</title>
         <link rel="stylesheet" href="style.css" />
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     </head>
     <body>
         <div id="area">
@@ -26,6 +28,11 @@
             </div>
         </div>
 
+        <footer>
+            <button id="copy-url"><i class="fa-solid fa-share-nodes"></i></button>
+        </footer>
+
         <script src="run.js"></script>
+        <script src="data.js"></script>
     </body>
 </html>
