--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     </head>
     <body>
+        <header>
+            <button id="copy-url"><i class="fa-solid fa-share-nodes"></i></button>
+            <span class="copied">COPIED!</span>
+        </header>
+
         <div id="area">
             <div class="grid" id="grid"></div>
             <div id="clicked"></div>
@@ -27,10 +32,6 @@
                 <button id="random-2">Non-resolvable Random</button>
             </div>
         </div>
-
-        <footer>
-            <button id="copy-url"><i class="fa-solid fa-share-nodes"></i></button>
-        </footer>
 
         <script src="run.js"></script>
         <script src="data.js"></script>
