ランダムボタンの名称を変更し、モードに応じた処理を追加しました。また、モードラベルの更新機能を実装しました。

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
             <div class="buttons">
                 <button id="set">Generate</button>
-                <button id="random">Resolvable Random</button>
-                <button id="random-2">Non-resolvable Random</button>
+                <button id="random-0">Square-Random</button>
+                <button id="random-1">Cross-Random</button>
+                <button id="random-2">Point-Random</button>
             </div>
         </div>
 
