--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="style.css" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/14.3.1/math.js"></script>
     </head>
     <body>
         <header>
@@ -17,8 +19,9 @@
         <div id="area">
             <div class="grid" id="grid"></div>
             <div id="clicked"></div>
+            <button id="mode">mode: reverse</button>
+            <button id="resolve">Resolve</button>
         </div>
-        <button id="mode">mode: reverse</button>
 
         <div class="setting">
             <div class="inputs">
