グリッドのスタイルを追加し、HTMLに新しいボタンを統合しました。また、ゲームの初期化処理を改善するために、プレセット生成メソッドをリファクタリングしました。

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Lights-Out</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="grid.css" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
@@ -18,9 +19,16 @@
 
         <div id="area">
             <div class="grid" id="grid"></div>
+
             <div id="clicked"></div>
+
             <button id="mode">mode: reverse</button>
-            <button id="resolve">Resolve</button>
+
+            <div id="resolver">
+                <button id="left">←</button>
+                <button id="resolve">Resolve</button>
+                <button id="right">→</button>
+            </div>
         </div>
 
         <div class="setting">
