解決ボタンの近くに「Solution No.」の表示を追加し、モードボタンのテキストを「mode: square」に変更しました。また、解答表示のロジックを改善しました。

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 
             <div id="clicked"></div>
 
-            <button id="mode">mode: reverse</button>
+            <button id="mode">mode: square</button>
 
             <div id="resolver">
                 <button id="left">←</button>
                 <button id="resolve">Resolve</button>
                 <button id="right">→</button>
+                <p id="solution-no">Solution No.0/0</p>
             </div>
         </div>
 
