グリッドの高さを70%に変更し、解決ボタンのレイアウトを改善しました。また、解答リセット処理を統一しました。

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             <button id="mode">mode: square</button>
 
             <div id="resolver">
-                <button id="left">←</button>
-                <button id="resolve">Resolve</button>
-                <button id="right">→</button>
+                <div id="solve-buttons">
+                    <button id="left">←</button>
+                    <button id="resolve">Resolve</button>
+                    <button id="right">→</button>
+                </div>
                 <p id="solution-no">Solution No.0/0</p>
             </div>
         </div>
