モードボタンを新しいコンテナに移動し、ボタンのスタイルを調整しました。また、リバースボタンの機能を追加しました。

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
             <div id="clicked"></div>
 
-            <button id="mode">mode: square</button>
+            <div id="mode-buttons">
+                <button id="reverse">Reverse</button>
+                <button id="mode">mode: square</button>
+            </div>
 
             <div id="resolver">
                 <div id="solve-buttons">
