--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
             <div class="inputs">
                 <input type="number" placeholder="row" value="5" />
                 <input type="number" placeholder="column" value="5" />
+                <button id="set">Generate</button>
             </div>
 
             <div class="buttons">
-                <button id="set">Generate</button>
-                <button id="random-0">Square-Random</button>
-                <button id="random-1">Cross-Random</button>
-                <button id="random-2">Point-Random</button>
+                <button id="random-0">Point-Random</button>
+                <button id="random-1">Square-Random</button>
+                <button id="random-2">Cross-Random</button>
+                <button id="random-3">X-Random</button>
             </div>
         </div>
 
