feat: add TypeScript support and refactor Resolver logic
- Introduced TypeScript files for Resolver and math utilities.
- Added a new math.js file for math operations.
- Updated grid.css to include a gap in the flex container.
- Modified index.html to add a new button for resolvable functionality.
- Refactored run.js to remove the getAnswer method and related logic.
- Created a tsconfig.json for TypeScript configuration.
- Enhanced the structure and type safety of the Resolver class.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div id="mode-buttons">
                 <button id="reverse">Reverse</button>
                 <button id="mode">mode: square</button>
+                <button id="resolvable">Resolvable?</button>
             </div>
 
             <div id="resolver">
@@ -33,15 +34,16 @@
                     <button id="resolve">Resolve</button>
                     <button id="right">→</button>
                 </div>
+
                 <p id="solution-no">Solution No.0/0</p>
             </div>
         </div>
 
         <div class="setting">
             <div class="inputs">
+                <button id="set">Generate</button>
                 <input type="number" placeholder="row" value="5" />
                 <input type="number" placeholder="column" value="5" />
-                <button id="set">Generate</button>
             </div>
 
             <div class="buttons">
@@ -52,7 +54,9 @@
             </div>
         </div>
 
+        <script src="dist/Resolver.js"></script>
         <script src="run.js"></script>
+        <script src="Answer.js"></script>
         <script src="data.js"></script>
     </body>
 </html>
